--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>標題</h1>
+    <div class="wrapper">
+        <h1>標題</h1>
+
+    </div>
     
 </body>
 </html>
