新增CSS JS資料夾

--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
+    <!-- <div class="circle" id="Circle"></div> -->
+
     <div class="wrapper">
-        <h1>標題</h1>
-        <h2>次標</h2>
+
 
     </div>
     
+
+
+    <script src="./js/index.js"></script>
 </body>
 </html>
