layout.html, all.css, index.html, index.css completed

--- a/index.html
+++ b/index.html
@@ -1,22 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./style/all.css">
     <link rel="stylesheet" href="./style/index.css">
 </head>
+
 <body>
     <!-- <div class="circle" id="Circle"></div> -->
+    <header>
+        <nav class="nav">
+            <div class="container">
+                <div class="nav_head">
+                    <a href="#">
+                        <img class="logo_b" src="./img/logo.png" width="50" height="50" alt="logo_img">
+                        <img class="logo_w" src="./img/logo-l.png" width="50" height="50" alt="logo-l_img">
+                    </a>
+                </div>
+                <h1>FRASH BURGER</h1>
+                <ul class="nav_list">
+                    <li class="nav_item">
+                        <a href="#Intro">
+                            TASTY
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#Product">
+                            BURGER
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#">
+                            MENU
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#">
+                            NEWS
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#">
+                            ABOUT
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#">
+                            FAQ
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#">
+                            <i class="fas fa-user"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-    <div class="wrapper">
+    <section class="base base-carousel">
+        <div class="container">
+            <ul class="carousel_list">
+                <li class="carousel_item">
+                    <img src="./img/carousel-1.png" width="1200" height="500" alt="carousel_img">
+                </li>
+            </ul>
+            <button class="btn carousel_prev"></button>
+            <button class="btn carousel_next"></button>
+        </div>
+    </section>
 
+    <section class="base base-intro" id="Intro">
+        <div class="container">
+            <h3>WHY TASTY ?</h3>
+            <ul class="intro_list">
+                <li class="intro_item">
+                    <img src="./img/intro1.png" width="600" height="300" alt="intro_img1">
+                    <div class="intro_item_content">
+                        <h3>URBAN MYTH</h3>
+                        <h4>OR JUST PLAIN EXCELLENT CUSTOMER SERVICE?</h4>
+                        <p>In reality, we don’t have any secrets at all. It’s just the way some of our customers like
+                            their burgers prepared, and we’re all about making our customers happy.</p>
+                    </div>
+                </li>
+                <li class="intro_item l-flip">
+                    <img src="./img/intro2.png" width="600" height="300" alt="intro_img2">
+                    <div class="intro_item_content">
+                        <h3>URBAN MYTH</h3>
+                        <h4>OR JUST PLAIN EXCELLENT CUSTOMER SERVICE?</h4>
+                        <p>In reality, we don’t have any secrets at all. It’s just the way some of our customers like
+                            their burgers prepared, and we’re all about making our customers happy.</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
 
-    </div>
-    
+    <section class="base base-product" id="Product">
+        <div class="container">
+            <h3>DELICIOUS BURGER</h3>
+            <ul class="product_list">
+                <li class="product_item">
+                    <a href="#">
+                        <div class="product_pic">
+                            <img src="./img/product1.png" width="350" height="250" alt="product_1">
+                        </div>
+                        <h4>NAME</h4>
+                        <p>1000 cal</p>
+                    </a>
+                </li>
+                <li class="product_item">
+                    <a href="#">
+                        <div class="product_pic">
+                            <img src="./img/product2.png" width="350" height="250" alt="product_2">
+                        </div>
+                        <h4>NAME</h4>
+                        <p>1000 cal</p>
+                    </a>
+                </li>
+                <li class="product_item">
+                    <a href="#">
+                        <div class="product_pic">
+                            <img src="./img/product3.png" width="350" height="250" alt="product_3">
+                        </div>
+                        <h4>NAME</h4>
+                        <p>1000 cal</p>
+                    </a>
+                </li>
+                <li class="product_item">
+                    <a href="#">
+                        <div class="product_pic">
+                            <img src="./img/product4.png" width="350" height="250" alt="product_4">
+                        </div>
+                        <h4>NAME</h4>
+                        <p>1000 cal</p>
+                    </a>
+                </li>
+                <li class="product_item">
+                    <a href="#">
+                        <div class="product_pic">
+                            <img src="./img/product5.png" width="350" height="250" alt="product_5">
+                        </div>
+                        <h4>NAME</h4>
+                        <p>1000 cal</p>
+                    </a>
+                </li>
+                <li class="product_item">
+                    <a href="#">
+                        <div class="product_pic">
+                            <img src="./img/product6.png" width="350" height="250" alt="product_6">
+                        </div>
+                        <h4>NAME</h4>
+                        <p>1000 cal</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
 
+    <section class="insta container">
+        <ul class="insta_list">
+            <li class="insta_item">
+                <a href="#">
+                    <img src="./img/insta-1.png" width="300" height="300" alt="insta_img1">
+                </a>
+            </li>
+            <li class="insta_item">
+                <a href="#">
+                    <img src="./img/insta-2.png" width="300" height="300" alt="insta_img2">
+                </a>
+            </li>
+            <li class="insta_item">
+                <a href="#">
+                    <img src="./img/insta-3.png" width="300" height="300" alt="insta_img3">
+                </a>
+            </li>
+            <li class="insta_item">
+                <a href="#">
+                    <img src="./img/insta-4.jpg" width="300" height="300" alt="insta_img4">
+                </a>
+            </li>
+            <li class="insta_item">
+                <a href="#">
+                    <img src="./img/insta-5.png" width="300" height="300" alt="insta_img5">
+                </a>
+            </li>
+            <li class="insta_item">
+                <a href="#">
+                    <img src="./img/insta-6.png" width="300" height="300" alt="insta_img6">
+                </a>
+            </li>
+            <li class="insta_item">
+                <a href="#">
+                    <img src="./img/insta-7.png" width="300" height="300" alt="insta_img7">
+                </a>
+            </li>
+            <li class="insta_item">
+                <a href="#">
+                    <img src="./img/insta-8.png" width="300" height="300" alt="insta_img8">
+                </a>
+            </li>
+        </ul>
+    </section>
 
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_head">
+                <a href="#">
+                    <img class="logo_b" src="./img/logo.png" width="50" height="50" alt="logo_img">
+                    <img class="logo_w" src="./img/logo-l.png" width="50" height="50" alt="logo-l_img">
+                </a>
+            </div>
+            <ul class="footer_list">
+                <li class="footer_item">
+                    follow us
+                </li>
+                <li class="footer_item">
+                    <a href="#">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                </li>
+                <li class="footer_item">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </li>
+                <li class="footer_item">
+                    <a href="#">
+                        <i class="fab fa-line"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <script src="./js/index.js"></script>
 </body>
+
 </html>
