--- a/about.html
+++ b/about.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FRASH BURGER</title>
+    <title>ABOUT US</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./style/all.css">
-    <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="./style/about.css">
+    <!-- <link rel="stylesheet" href="./style/index.css"> -->
 </head>
 
 <body>
@@ -120,41 +121,54 @@
         <a href="#"></a>
     </aside>
 
-    <section class="base base-carousel">
-        <div class="container">
-            <ul class="carousel_list">
-                <li class="carousel_item">
-                    <img src="./img/carousel-1.png" width="1200" height="500" alt="carousel_img">
-                </li>
-            </ul>
-            <button class="btn carousel_prev"></button>
-            <button class="btn carousel_next"></button>
+    <section class="base base-banner">
+        <img src="./img/aboutus.png" alt="about_banner" width="1440" height="500">
+        <div class="banner_content">
+            <h2>FRESH BURGER</h2>
+            <h5>First Restaurants Open In Colorado</h5>
+            <p>Coloradoans get double the reason to celebrate on November 20, as the state’s first two In-N-Out restaurants open on the same day in Colorado Springs and Aurora. Because of a rigorous commitment to quality and freshness, a brand new warehouse and patty-making facility also are underway in Colorado Springs. This ensures that these new restaurants, and others that will follow, can guarantee the freshest, highest quality foods.</p>
         </div>
     </section>
 
-    <section class="base base-intro" id="Intro">
+    <section class="base base-chef">
         <div class="container">
-            <h3>TASTY</h3>
-            <ul class="intro_list">
-                <li class="intro_item">
-                    <img src="./img/intro1.png" width="600" height="300" alt="intro_img1">
-                    <div class="intro_item_content">
-                        <h3>URBAN MYTH</h3>
-                        <h4>OR JUST PLAIN EXCELLENT CUSTOMER SERVICE?</h4>
-                        <p>In reality, we don’t have any secrets at all. It’s just the way some of our customers like
-                            their burgers prepared, and we’re all about making our customers happy.</p>
-                    </div>
-                </li>
-                <li class="intro_item l-flip">
-                    <img src="./img/intro2.png" width="600" height="300" alt="intro_img2">
-                    <div class="intro_item_content">
-                        <h3>URBAN MYTH</h3>
-                        <h4>OR JUST PLAIN EXCELLENT CUSTOMER SERVICE?</h4>
-                        <p>In reality, we don’t have any secrets at all. It’s just the way some of our customers like
-                            their burgers prepared, and we’re all about making our customers happy.</p>
-                    </div>
-                </li>
-            </ul>
+            <h3>CHEF</h3>
+        <ul class="chef_list">
+            <li class="chef_item">
+                <img src="./img/chef-1.png" width="250" height="250" alt="chef_pic">
+                <h5>Andy</h5>
+                <p>We are very pleased to announce that Andy is the new Chef at FRESH BURGER, heralding a new and very exciting era for both the Cheese Burger & food destination and the Taipei.</p>
+            </li>
+            <li class="chef_item">
+                <img src="./img/chef-2.png" width="250" height="250" alt="chef_pic">
+                <h5>Ken</h5>
+                <p>Chef Ken’s personal trend is expressed in preparing food blending those with local herbs and fresh wild-growing spices. His remarkable creativity, garnished with years of experience, astonishes every customer, tasting classic dishes in a non-conventional mixture sealed by his unique signature.</p>
+            </li>
+            <li class="chef_item">
+                <img src="./img/chef-3.png" width="250" height="250" alt="chef_pic">
+                <h5>Ben</h5>
+                <p>Coming from a family of pubs passionate about offering fresh, local, seasonal dishes on our menus, we’re delighted to introduce you to the Chef of FRESG BURGER.</p>
+            </li>
+        </ul>
+        </div>
+    </section>
+
+    <section class="base base-place">
+        <div class="container">
+            <div>
+                <h6>
+                    TEL : 02-1234-1234
+                </h6>
+                <h6>
+                    Address : No. 129, Section 3, Nanjing East Road, Taipei
+                </h6>
+                <h6>
+                    OPEN : 09:00-18:00
+                </h6>
+            </div>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.4678303431383!2d121.54106421495887!3d25.052127983963917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abddfb12794f%3A0x71c40951a2fc40fe!2zMTA0OTHlj7DljJfluILkuK3lsbHljYDljZfkuqzmnbHot6_kuInmrrUyMTnomZ8!5e0!3m2!1szh-TW!2stw!4v1643612160098!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
         </div>
     </section>
 
