--- a/faq.html
+++ b/faq.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FRASH BURGER</title>
+    <title>FAQ</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./style/faq.css">
     <link rel="stylesheet" href="./style/all.css">
-    <link rel="stylesheet" href="./style/index.css">
+    <!-- <link rel="stylesheet" href="./style/index.css"> -->
 </head>
 
 <body>
@@ -120,41 +121,118 @@
         <a href="#"></a>
     </aside>
 
-    <section class="base base-carousel">
+    <section class="base base-faq">
         <div class="container">
-            <ul class="carousel_list">
-                <li class="carousel_item">
-                    <img src="./img/carousel-1.png" width="1200" height="500" alt="carousel_img">
+            <h3>Q & A</h3>
+            <ul class="faq_list">
+                <li class="faq_item">
+                    <button type="button" class="btn btn-close btn-collapse">+</button>
+                    <div>
+                        <p class="faq_num">01</p>
+                        <h5 class="faq_q">
+                            Why do FRESH BURGER insist on making their own buns?
+                        </h5>
+                    </div>
+                    <p class="faq_a js-none" id="FaqA-1">
+                        In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
+                        tool. However, unqualified buns often use many additives to save speed and cost, or are light
+                        and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
+                        homemade natural yeast old bread, like precious rice, providing a solid layer of connection,
+                        full of fragrance and rhyme, sometimes, often forgotten Which one is the real protagonist on the
+                        stage!
+                    </p>
+                </li>
+                <li class="faq_item">
+                    <button type="button" class="btn btn-close btn-collapse">+</button>
+                    <div class="l-flip">
+                        <p class="faq_num">02</p>
+                        <h5 class="faq_q">
+                            Why are the raw vegetables and tomato so fresh in the FRESH BURGER?
+                        </h5>
+                    </div>
+                    <p class="faq_a js-none" id="FaqA-2">
+                        In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
+                        tool. However, unqualified buns often use many additives to save speed and cost, or are light
+                        and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
+                        homemade natural yeast old bread, like precious rice, providing a solid layer of connection,
+                        full of fragrance and rhyme, sometimes, often forgotten Which one is the real protagonist on the
+                        stage!
+                    </p>
+                </li>
+                <li class="faq_item">
+                    <button type="button" class="btn btn-close btn-collapse">+</button>
+                    <div>
+                        <p class="faq_num">03</p>
+                        <h5 class="faq_q">
+                            What is the "No Combo Meat Guarantee" for FRESH BURGER?
+                        </h5>
+                    </div>
+                    <p class="faq_a js-none" id="FaqA-3">
+                        In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
+                        tool. However, unqualified buns often use many additives to save speed and cost, or are light
+                        and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
+                        homemade natural yeast old bread, like precious rice, providing a solid layer of connection,
+                        full of fragrance and rhyme, sometimes, often forgotten Which one is the real protagonist on the
+                        stage!
+                    </p>
+                </li>
+                <li class="faq_item">
+                    <button type="button" class="btn btn-close btn-collapse">+</button>
+                    <div class="l-flip">
+                        <p class="faq_num">04</p>
+                        <h5 class="faq_q">
+                            Why are the raw vegetables and tomato so fresh in the FRESH BURGER?
+                        </h5>
+                    </div>
+                    <p class="faq_a js-none" id="FaqA-4">
+                        In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
+                        tool. However, unqualified buns often use many additives to save speed and cost, or are light
+                        and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
+                        homemade natural yeast old bread, like precious rice, providing a solid layer of connection,
+                        full of fragrance and rhyme, sometimes, often forgotten Which one is the real protagonist on the
+                        stage!
+                    </p>
+                </li>
+                <li class="faq_item">
+                    <button type="button" class="btn btn-close btn-collapse">+</button>
+                    <div>
+                        <p class="faq_num">05</p>
+                        <h5 class="faq_q">
+                            What is the "No Combo Meat Guarantee" for FRESH BURGER?
+                        </h5>
+                    </div>
+                    <p class="faq_a js-none" id="FaqA-5">
+                        In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
+                        tool. However, unqualified buns often use many additives to save speed and cost, or are light
+                        and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
+                        homemade natural yeast old bread, like precious rice, providing a solid layer of connection,
+                        full of fragrance and rhyme, sometimes, often forgotten Which one is the real protagonist on the
+                        stage!
+                    </p>
                 </li>
             </ul>
-            <button class="btn carousel_prev"></button>
-            <button class="btn carousel_next"></button>
         </div>
     </section>
 
-    <section class="base base-intro" id="Intro">
+    <section class="base base-info">
         <div class="container">
-            <h3>TASTY</h3>
-            <ul class="intro_list">
-                <li class="intro_item">
-                    <img src="./img/intro1.png" width="600" height="300" alt="intro_img1">
-                    <div class="intro_item_content">
-                        <h3>URBAN MYTH</h3>
-                        <h4>OR JUST PLAIN EXCELLENT CUSTOMER SERVICE?</h4>
-                        <p>In reality, we don’t have any secrets at all. It’s just the way some of our customers like
-                            their burgers prepared, and we’re all about making our customers happy.</p>
-                    </div>
-                </li>
-                <li class="intro_item l-flip">
-                    <img src="./img/intro2.png" width="600" height="300" alt="intro_img2">
-                    <div class="intro_item_content">
-                        <h3>URBAN MYTH</h3>
-                        <h4>OR JUST PLAIN EXCELLENT CUSTOMER SERVICE?</h4>
-                        <p>In reality, we don’t have any secrets at all. It’s just the way some of our customers like
-                            their burgers prepared, and we’re all about making our customers happy.</p>
-                    </div>
-                </li>
-            </ul>
+            <h3>CONTACT INFO.</h3>
+            <div class="info">
+                <div class="info_head">
+                    <label>NAME
+                        <input type="text">
+                    </label>
+                    <label>EMAIL
+                        <input type="email">
+                    </label>
+                    <label>TEL
+                        <input type="tel">
+                    </label>
+                </div>
+                <div class="info_body">
+                    <textarea placeholder="MESSAGE..."></textarea>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -258,6 +336,7 @@
         </div>
     </footer>
 
+    <script src="./js/faq.js"></script>
     <script src="./js/all.js"></script>
 </body>
 
