--- a/news.html
+++ b/news.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FRASH BURGER</title>
+    <title>NEWS</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./style/all.css">
-    <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="./style/news.css">
 </head>
 
 <body>
-
     <form class="member" id="Member">
         <div class="member_form">
             <button type="button" class="btn btn-close" id="BtnClose">x</button>
@@ -120,38 +119,97 @@
         <a href="#"></a>
     </aside>
 
-    <section class="base base-carousel">
-        <div class="container">
-            <ul class="carousel_list">
-                <li class="carousel_item">
-                    <img src="./img/carousel-1.png" width="1200" height="500" alt="carousel_img">
-                </li>
-            </ul>
-            <button class="btn carousel_prev"></button>
-            <button class="btn carousel_next"></button>
-        </div>
+    <section class="base base-banner">
+        <img src="./img/news-banner1.jpg" alt="news_banner" width="1440" height="500">
     </section>
 
-    <section class="base base-intro" id="Intro">
+    <section class="base base-news">
         <div class="container">
-            <h3>TASTY</h3>
-            <ul class="intro_list">
-                <li class="intro_item">
-                    <img src="./img/intro1.png" width="600" height="300" alt="intro_img1">
-                    <div class="intro_item_content">
-                        <h3>URBAN MYTH</h3>
-                        <h4>OR JUST PLAIN EXCELLENT CUSTOMER SERVICE?</h4>
-                        <p>In reality, we don’t have any secrets at all. It’s just the way some of our customers like
-                            their burgers prepared, and we’re all about making our customers happy.</p>
+            <ul class="btn_list">
+                <li class="btn_item">
+                    <button class="btn">ALL</button>
+                </li>
+                <li class="btn_item">
+                    <button class="btn">POST</button>
+                </li>
+                <li class="btn_item">
+                    <button class="btn">NEWS</button>
+                </li>
+                <li class="btn_item">
+                    <button class="btn">DISCOUNT</button>
+                </li>
+            </ul>
+            <ul class="news_list">
+                <li class="news_item">
+                    <img src="./img/news-1.png" width="350" height="350" alt="news_pic">
+                    <div class="news_body">
+                        <div class="news_day">
+                            <div>2022/01/01</div>
+                            <div class="news_type">DISCOUNT</div>
+                        </div>
+                        <h4>NEW YEAR DISCOUNT</h4>
+                        <p>Get up to 50% off at FRESH BURGER, hurry in and eat</p>
+                        <button class="btn news_btn">MORE</button>
                     </div>
                 </li>
-                <li class="intro_item l-flip">
-                    <img src="./img/intro2.png" width="600" height="300" alt="intro_img2">
-                    <div class="intro_item_content">
-                        <h3>URBAN MYTH</h3>
-                        <h4>OR JUST PLAIN EXCELLENT CUSTOMER SERVICE?</h4>
-                        <p>In reality, we don’t have any secrets at all. It’s just the way some of our customers like
-                            their burgers prepared, and we’re all about making our customers happy.</p>
+                <li class="news_item">
+                    <img src="./img/news-2.png" width="350" height="350" alt="news_pic">
+                    <div class="news_body">
+                        <div class="news_day">
+                            <div>2022/01/01</div>
+                            <div class="news_type">POST</div>
+                        </div>
+                        <h4>EPIDEMIC REGULATIONS</h4>
+                        <p>You must wear a mask and be vaccinated when entering the store</p>
+                        <button class="btn news_btn">MORE</button>
+                    </div>
+                </li>
+                <li class="news_item">
+                    <img src="./img/news-3.png" width="350" height="350" alt="news_pic">
+                    <div class="news_body">
+                        <div class="news_day">
+                            <div>2022/01/01</div>
+                            <div class="news_type">NEWS</div>
+                        </div>
+                        <h4>WEAR MASK</h4>
+                        <p>We must wear masks to protect ourselves and others</p>
+                        <button class="btn news_btn">MORE</button>
+                    </div>
+                </li>
+                <li class="news_item">
+                    <img src="./img/news-1.png" width="350" height="350" alt="news_pic">
+                    <div class="news_body">
+                        <div class="news_day">
+                            <div>2022/01/01</div>
+                            <div class="news_type">DISCOUNT</div>
+                        </div>
+                        <h4>NEW YEAR DISCOUNT</h4>
+                        <p>Get up to 50% off at FRESH BURGER, hurry in and eat</p>
+                        <button class="btn news_btn">MORE</button>
+                    </div>
+                </li>
+                <li class="news_item">
+                    <img src="./img/news-1.png" width="350" height="350" alt="news_pic">
+                    <div class="news_body">
+                        <div class="news_day">
+                            <div>2022/01/01</div>
+                            <div class="news_type">DISCOUNT</div>
+                        </div>
+                        <h4>NEW YEAR DISCOUNT</h4>
+                        <p>Get up to 50% off at FRESH BURGER, hurry in and eat</p>
+                        <button class="btn news_btn">MORE</button>
+                    </div>
+                </li>
+                <li class="news_item">
+                    <img src="./img/news-1.png" width="350" height="350" alt="news_pic">
+                    <div class="news_body">
+                        <div class="news_day">
+                            <div>2022/01/01</div>
+                            <div class="news_type">DISCOUNT</div>
+                        </div>
+                        <h4>NEW YEAR DISCOUNT</h4>
+                        <p>Get up to 50% off at FRESH BURGER, hurry in and eat</p>
+                        <button class="btn news_btn">MORE</button>
                     </div>
                 </li>
             </ul>
@@ -259,6 +317,7 @@
     </footer>
 
     <script src="./js/all.js"></script>
+    <script src="./js/news.js"></script>
 </body>
 
 </html>
