--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
     <title>ABOUT US</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="./style/all.css">
     <link rel="stylesheet" href="./style/about.css">
-    <!-- <link rel="stylesheet" href="./style/index.css"> -->
 </head>
 
 <body>
