--- a/news.html
+++ b/news.html
@@ -8,6 +8,7 @@
     <title>NEWS</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="./style/all.css">
     <link rel="stylesheet" href="./style/news.css">
 </head>
