add product.html&css menu.js

--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
         <div class="member_form">
             <button type="button" class="btn btn-close" id="BtnClose">x</button>
             <div class="member_box">
-                <h4>SIGN IN </h4>
+                <h4>
                 <div>
                     <label for="LoginId">USERID</label>
                     <input type="text" id="LoginId">
@@ -137,85 +137,85 @@
                 </li>
             </ul>
             <ul class="product_list">
-                <li class="product_item">
-                    <a href="#">
+                <li class="product_item beef">
+                    <a href="product.html">
                         <div class="product_pic">
                             <img src="./img/product1.png" width="350" height="250" alt="product_1">
                         </div>
-                        <h4>NAME</h4>
-                        <p>1000 cal</p>
+                        <h4>BEEF BURGER</h4>
+                        <p>890 cal</p>
                     </a>
                 </li>
-                <li class="product_item">
-                    <a href="#">
+                <li class="product_item beef">
+                    <a href="product.html">
                         <div class="product_pic">
                             <img src="./img/product2.png" width="350" height="250" alt="product_2">
                         </div>
-                        <h4>NAME</h4>
+                        <h4>BEEF BURGER</h4>
                         <p>1000 cal</p>
                     </a>
                 </li>
-                <li class="product_item">
-                    <a href="#">
+                <li class="product_item beef">
+                    <a href="product.html">
                         <div class="product_pic">
                             <img src="./img/product3.png" width="350" height="250" alt="product_3">
                         </div>
-                        <h4>NAME</h4>
-                        <p>1000 cal</p>
+                        <h4>BEEF BURGER</h4>
+                        <p>990 cal</p>
                     </a>
                 </li>
-                <li class="product_item">
-                    <a href="#">
+                <li class="product_item pork">
+                    <a href="product.html">
                         <div class="product_pic">
                             <img src="./img/product4.png" width="350" height="250" alt="product_4">
                         </div>
-                        <h4>NAME</h4>
+                        <h4>PORK BURGER</h4>
                         <p>1000 cal</p>
                     </a>
                 </li>
-                <li class="product_item">
-                    <a href="#">
+                <li class="product_item pork">
+                    <a href="product.html">
                         <div class="product_pic">
                             <img src="./img/product5.png" width="350" height="250" alt="product_5">
                         </div>
-                        <h4>NAME</h4>
-                        <p>1000 cal</p>
+                        <h4>PORK BURGER</h4>
+                        <p>1100 cal</p>
                     </a>
                 </li>
-                <li class="product_item">
-                    <a href="#">
+                <li class="product_item chicken">
+                    <a href="product.html">
                         <div class="product_pic">
                             <img src="./img/product6.png" width="350" height="250" alt="product_6">
                         </div>
-                        <h4>NAME</h4>
-                        <p>1000 cal</p>
+                        <h4>CHICKEN BURGER</h4>
+                        <p>700 cal</p>
                     </a>
                 </li>
-                <li class="product_item">
-                    <a href="#">
+                <li class="product_item chicken">
+                    <a href="product.html">
                         <div class="product_pic">
                             <img src="./img/product7.png" width="350" height="250" alt="product_7">
                         </div>
-                        <h4>NAME</h4>
-                        <p>1000 cal</p>
+                        <h4>CHICKEN BURGER</h4>
+                        <p>700 cal</p>
                     </a>
                 </li>
-                <li class="product_item">
-                    <a href="#">
+                <li class="product_item vegetable">
+                    <a href="product.html">
                         <div class="product_pic">
                             <img src="./img/product8.png" width="350" height="250" alt="product_8">
                         </div>
-                        <h4>NAME</h4>
-                        <p>1000 cal</p>
+                        <h4>VEGAN BURGER</h4>
+                        <p>550 cal</p>
                     </a>
                 </li>
-                <li class="product_item">
-                    <a href="#">
+                <li class="product_item vegetable">
+                    <a href="product.html">
                         <div class="product_pic">
                             <img src="./img/product9.png" width="350" height="250" alt="product_9">
                         </div>
-                        <h4>NAME</h4>
-                        <p>1000 cal</p>
+                        <h4>VEGAN BURGER</h4>
+                        <p>600 cal</p>
                     </a>
                 </li>
             </ul>
@@ -323,6 +323,7 @@
     </footer>
 
     <script src="./js/all.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
