--- a/product.html
+++ b/product.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="./style/faq.css">
     <link rel="stylesheet" href="./style/all.css">
+    <link rel="stylesheet" href="./style/product.css">
 </head>
 
 <body>
@@ -121,119 +121,32 @@
         <a href="#"></a>
     </aside>
 
-    <section class="base base-faq">
+    <section class="base base-product">
         <div class="container">
-            <h3>Q & A</h3>
-            <ul class="faq_list">
-                <li class="faq_item">
-                    <button type="button" class="btn btn-close btn-collapse">+</button>
-                    <div>
-                        <p class="faq_num">01</p>
-                        <h5 class="faq_q">
-                            Why do FRESH BURGER insist on making their own buns?
-                        </h5>
-                    </div>
-                    <p class="faq_a js-none" id="FaqA-1">
-                        In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
-                        tool. However, unqualified buns often use many additives to save speed and cost, or are light
-                        and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
-                        homemade natural yeast old bread, like precious rice, providing a solid layer of connection,
-                        full of fragrance and rhyme, sometimes, often forgotten Which one is the real protagonist on the
-                        stage!
-                    </p>
-                </li>
-                <li class="faq_item">
-                    <button type="button" class="btn btn-close btn-collapse">+</button>
-                    <div class="l-flip">
-                        <p class="faq_num">02</p>
-                        <h5 class="faq_q">
-                            Why are the raw vegetables and tomato so fresh in the FRESH BURGER?
-                        </h5>
-                    </div>
-                    <p class="faq_a js-none" id="FaqA-2">
-                        In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
-                        tool. However, unqualified buns often use many additives to save speed and cost, or are light
-                        and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
-                        homemade natural yeast old bread, like precious rice, providing a solid layer of connection,
-                        full of fragrance and rhyme, sometimes, often forgotten Which one is the real protagonist on the
-                        stage!
-                    </p>
-                </li>
-                <li class="faq_item">
-                    <button type="button" class="btn btn-close btn-collapse">+</button>
-                    <div>
-                        <p class="faq_num">03</p>
-                        <h5 class="faq_q">
-                            What is the "No Combo Meat Guarantee" for FRESH BURGER?
-                        </h5>
-                    </div>
-                    <p class="faq_a js-none" id="FaqA-3">
-                        In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
-                        tool. However, unqualified buns often use many additives to save speed and cost, or are light
-                        and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
-                        homemade natural yeast old bread, like precious rice, providing a solid layer of connection,
-                        full of fragrance and rhyme, sometimes, often forgotten Which one is the real protagonist on the
-                        stage!
-                    </p>
-                </li>
-                <li class="faq_item">
-                    <button type="button" class="btn btn-close btn-collapse">+</button>
-                    <div class="l-flip">
-                        <p class="faq_num">04</p>
-                        <h5 class="faq_q">
-                            Why are the raw vegetables and tomato so fresh in the FRESH BURGER?
-                        </h5>
-                    </div>
-                    <p class="faq_a js-none" id="FaqA-4">
-                        In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
-                        tool. However, unqualified buns often use many additives to save speed and cost, or are light
-                        and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
-                        homemade natural yeast old bread, like precious rice, providing a solid layer of connection,
-                        full of fragrance and rhyme, sometimes, often forgotten Which one is the real protagonist on the
-                        stage!
-                    </p>
-                </li>
-                <li class="faq_item">
-                    <button type="button" class="btn btn-close btn-collapse">+</button>
-                    <div>
-                        <p class="faq_num">05</p>
-                        <h5 class="faq_q">
-                            What is the "No Combo Meat Guarantee" for FRESH BURGER?
-                        </h5>
-                    </div>
-                    <p class="faq_a js-none" id="FaqA-5">
-                        In American hamburgers, "bread" is often an inconspicuous role, and it is also a cost-saving
-                        tool. However, unqualified buns often use many additives to save speed and cost, or are light
-                        and tasteless, full of crumbs. The table has no taste at all; Le Ning uses self-cultivation and
-                        homemade natural yeast old bread, like precious rice, providing a solid layer of connection,
-                        full of fragrance and rhyme, sometimes, often forgotten Which one is the real protagonist on the
-                        stage!
-                    </p>
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    <section class="base base-info">
-        <div class="container">
-            <h3>CONTACT INFO.</h3>
-            <form class="info">
-                <div class="info_head">
-                    <label>NAME
-                        <input type="text">
-                    </label>
-                    <label>EMAIL
-                        <input type="email">
-                    </label>
-                    <label>TEL
-                        <input type="tel">
-                    </label>
-                </div>
-                <div class="info_body">
-                    <textarea placeholder="MESSAGE..."></textarea>
-                </div>
-                <button class="btn btn-ok" type="button">OK</button>
-            </form>
+            <div class="product_head">
+                <img src="./img/product_1.png" width="500" height="500" alt="product_1">
+            </div>
+            <div class="product_body">
+                <h2>Bacon Cheeseburger</h2>
+                <p>Fresh beef available in the contiguous U.S., Alaska and Canada.</p>
+                <span>810 cal </span>
+                <br>
+                <h4>source of meat</h4>
+                <ul class="source_list">
+                    <li class="source_item">
+                        <i class="fas fa-piggy-bank"></i>
+                        <span>Taiwan Pork</span>
+                    </li>
+                    <li class="source_item">
+                        <i class="fas fa-fish"></i>
+                        <span>Taiwan/Canada Fish</span>
+                    </li>
+                    <li class="source_item">
+                        <i class="fas fa-kiwi-bird"></i>
+                        <span>Taiwan/US Chicken</span>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -337,7 +250,6 @@
         </div>
     </footer>
 
-    <script src="./js/faq.js"></script>
     <script src="./js/all.js"></script>
 </body>
 
