--- a/news.html
+++ b/news.html
@@ -160,8 +160,8 @@
                             <div>2022/01/01</div>
                             <div class="news_type">POST</div>
                         </div>
-                        <h4>EPIDEMIC REGULATIONS</h4>
-                        <p>You must wear a mask and be vaccinated when entering the store</p>
+                        <h4>REGULATIONS</h4>
+                        <p>You must wear a mask and be vaccinated</p>
                         <button class="btn news_btn">MORE</button>
                     </div>
                 </li>
@@ -170,7 +170,7 @@
                     <div class="news_body">
                         <div class="news_day">
                             <div>2022/01/01</div>
-                            <div class="news_type">NEWS</div>
+                            <div class="news_type">POST</div>
                         </div>
                         <h4>WEAR MASK</h4>
                         <p>We must wear masks to protect ourselves and others</p>
@@ -178,10 +178,22 @@
                     </div>
                 </li>
                 <li class="news_item">
-                    <img src="./img/news-1.png" width="350" height="350" alt="news_pic">
+                    <img src="./img/news-4.jpg" width="350" height="350" alt="news_pic">
                     <div class="news_body">
                         <div class="news_day">
                             <div>2022/01/01</div>
+                            <div class="news_type">NEWS</div>
+                        </div>
+                        <h4>FREE MEAT</h4>
+                        <p>Get a piece of beef by any spending</p>
+                        <button class="btn news_btn">MORE</button>
+                    </div>
+                </li>
+                <li class="news_item">
+                    <img src="./img/news-1.png" width="350" height="350" alt="news_pic">
+                    <div class="news_body">
+                        <div class="news_day">
+                            <div>2022/02/01</div>
                             <div class="news_type">DISCOUNT</div>
                         </div>
                         <h4>NEW YEAR DISCOUNT</h4>
@@ -193,19 +205,7 @@
                     <img src="./img/news-1.png" width="350" height="350" alt="news_pic">
                     <div class="news_body">
                         <div class="news_day">
-                            <div>2022/01/01</div>
-                            <div class="news_type">DISCOUNT</div>
-                        </div>
-                        <h4>NEW YEAR DISCOUNT</h4>
-                        <p>Get up to 50% off at FRESH BURGER, hurry in and eat</p>
-                        <button class="btn news_btn">MORE</button>
-                    </div>
-                </li>
-                <li class="news_item">
-                    <img src="./img/news-1.png" width="350" height="350" alt="news_pic">
-                    <div class="news_body">
-                        <div class="news_day">
-                            <div>2022/01/01</div>
+                            <div>2022/02/02</div>
                             <div class="news_type">DISCOUNT</div>
                         </div>
                         <h4>NEW YEAR DISCOUNT</h4>
