add slide(css, js), nav change more to home

--- a/faq.html
+++ b/faq.html
@@ -74,8 +74,8 @@
                 <h1>FRASH BURGER</h1>
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="#More">
-                            MORE
+                        <a href="./index.html">
+                            HOME
                         </a>
                     </li>
                     <li class="nav_item">
@@ -218,7 +218,7 @@
         <div class="container">
             <h3>CONTACT INFO.</h3>
             <form class="info">
-                <div class="info_head">
+                <div class="info_head js-slide js-slide-l">
                     <label>NAME
                         <input type="text">
                     </label>
@@ -229,7 +229,7 @@
                         <input type="tel">
                     </label>
                 </div>
-                <div class="info_body">
+                <div class="info_body js-slide js-slide-r">
                     <textarea placeholder="MESSAGE..."></textarea>
                 </div>
                 <button class="btn btn-ok" type="button">OK</button>
