--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <h1>FRASH BURGER</h1>
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="#More">
-                            MORE
+                        <a href="./index.html">
+                            HOME
                         </a>
                     </li>
                     <li class="nav_item">
@@ -138,7 +138,7 @@
             <h3>TASTY</h3>
             <ul class="intro_list">
                 <li class="intro_item">
-                    <img src="./img/intro1.png" width="600" height="300" alt="intro_img1">
+                    <img class="js-slide js-slide-l" src="./img/intro1.png" width="600" height="300" alt="intro_img1">
                     <div class="intro_item_content">
                         <h3>URBAN MYTH</h3>
                         <h4>OR JUST PLAIN EXCELLENT CUSTOMER SERVICE?</h4>
@@ -147,7 +147,7 @@
                     </div>
                 </li>
                 <li class="intro_item l-flip">
-                    <img src="./img/intro2.png" width="600" height="300" alt="intro_img2">
+                    <img class="js-slide js-slide-r" src="./img/intro2.png" width="600" height="300" alt="intro_img2">
                     <div class="intro_item_content">
                         <h3>URBAN MYTH</h3>
                         <h4>OR JUST PLAIN EXCELLENT CUSTOMER SERVICE?</h4>
