--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
                 <h1>FRASH BURGER</h1>
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="#More">
-                            MORE
+                        <a href="./index.html">
+                            HOME
                         </a>
                     </li>
                     <li class="nav_item">
@@ -155,7 +155,7 @@
 
     <section class="base base-place">
         <div class="container">
-            <div>
+            <div class="js-slide js-slide-l">
                 <h6>
                     TEL : 02-1234-1234
                 </h6>
@@ -166,7 +166,7 @@
                     OPEN : 09:00-18:00
                 </h6>
             </div>
-            <div>
+            <div class="js-slide js-slide-r">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.4678303431383!2d121.54106421495887!3d25.052127983963917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abddfb12794f%3A0x71c40951a2fc40fe!2zMTA0OTHlj7DljJfluILkuK3lsbHljYDljZfkuqzmnbHot6_kuInmrrUyMTnomZ8!5e0!3m2!1szh-TW!2stw!4v1643612160098!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
