--- a/menu.html
+++ b/menu.html
@@ -73,8 +73,8 @@
                 <h1>FRASH BURGER</h1>
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="#More">
-                            MORE
+                        <a href="./index.html">
+                            HOME
                         </a>
                     </li>
                     <li class="nav_item">
